k8sapps/k8s-cluster-deploy/k8s_test_ns_conf.yml
#
# Create at 2019-01-21, build namespace for test.
#
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-test-ns
  labels:
    name: k8s-test-ns
