k8sapps/k8s-cluster-deploy/busybox_pod_conf.yml
#
# Created at 2019-01-21, build busybox pod for debug k8s env. 
#
apiVersion: v1
kind: Pod
metadata:
  name: busybox-app-pod 
  namespace: k8s-test-ns
  labels:
    env: test
spec:
  restartPolicy: Always 
  containers:
  - name: busybox-app
    image: localhost:5000/busybox
    imagePullPolicy: IfNotPresent
    command: ["sh", "-c", "while true; do echo 'busybox is running ...'; sleep 5; done;"]
---
