k8sapps/k8s-cluster-deploy/k8s_test_sidecar_conf.yml
#
# Created at 2020-12-21, test deploy init and sidecar container.
#
apiVersion: v1
kind: Pod
metadata:
  name: sidecar-test
  namespace: k8s-test-ns
  labels:
    app: sidecar-test
    env: test
spec:
  restartPolicy: Always
  containers:
  - name: busybox
    image: busybox:1.30
    imagePullPolicy: IfNotPresent
    command: ["sh", "-c", "while true; do echo $(date +'%Y-%m-%d_%H:%M:%S') 'busybox is running ...'; sleep 5; done;"]
  - name: alpine
    image: alpine:3.9
    imagePullPolicy: IfNotPresent
    # lifecycle:
    #   type: Sidecar
    command: ["sh"]
    args: ["-c", "while true; do echo $(date +'%Y-%m-%d_%H:%M:%S') 'alpine is running ...'; sleep 5; done;"]
---
