k8sapps/k8s-cluster-deploy/test_busybox_pod_conf.yml
#
# Created at 2019-01-21, build busybox pod for debug k8s env. 
#
apiVersion: v1
kind: Pod
metadata:
  name: busybox-app-pod 
  namespace: k8s-test-ns
  labels:
    env: test
spec:
  restartPolicy: Always 
  containers:
  - name: busybox-app
    image: localhost:5000/busybox
    imagePullPolicy: IfNotPresent
    command: ["sh", "-c", "while true; do echo $(date +'%Y-%m-%d_%H:%M:%S') ${KEY_01} ${KEY_02} ', busybox is running ...'; sleep 5; done;"]
    volumeMounts:
    - name: config-vol
      mountPath: /etc/config
  volumes:
  - name: config-vol
    configMap:
      name: k8s-test-config
      items:
      - key: app.properties
        path: properties

---
