k8sapps/k8s-cluster-deploy/mock_service_conf.yml
#
# Create at 2019-01-21, build mock service alone with 2 instances deployment backend. 
# 
kind: Service 
apiVersion: v1
metadata:
  name: mock-app-service
  namespace: k8s-test-ns
  labels:
    app: mock-app-service
spec:
  type: NodePort  # "LoadBalancer" not support on docker-desktop
  ports:
  - protocol: TCP
    port: 17891   # 暴露在clusterip上的端口, 供集群内部使用
    targetPort: 17891  # pod上的端口
  selector:
    app: mock-app  # select pods

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-app-deploy
  namespace: k8s-test-ns
  labels:
    app: mock-app-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mock-app
  template:
    metadata:
      labels:
        app: mock-app
    spec:
      containers:
      - name: mock-app
        image: localhost:5000/mock
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 17891

---
