k8sapps/k8s-cluster-deploy/test_external_svc_conf.yml
#
# Create at 2019-06-02, test service with external name.
#
apiVersion: v1
kind: Service
metadata:
  name: ext-mock-svc
  namespace: mini-test-ns
spec:
  type: ExternalName
  externalName: 192.168.1.6

---
