k8sapps/k8s-cluster-deploy/echoserver_hello_conf.yml
#
# Create at 2019-01-27, deploy echo server hello-world in ingress cluster.
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: k8s-test-ns
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: echo-server
        image: localhost:5000/http-echo
        args:
        - -listen=:80
        - -text="Hello from Kubernetes!"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: k8s-test-ns
spec:
  selector:
    app: hello-world
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: k8s-test-ns
  annotations:
#   kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: k8s.apiexample.com
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: hello-world
          servicePort: 80

---
