k8sapps/k8s-cluster-deploy/echoserver_hola_ingress_conf.yml
#
# Create at 2019-01-27, deploy echo server hola-mundo in ingress cluster.
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola-mundo 
  namespace: k8s-test-ns
  labels:
    app: hola-mundo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hola-mundo
  template:
    metadata:
      labels:
        app: hola-mundo
    spec:
      containers:
      - name: echo-server
        image: localhost:5000/http-echo
        args:
        - -listen=:80
        - -text="Hola de Kubernetes!"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hola-mundo 
  namespace: k8s-test-ns
spec:
  selector:
    app: hola-mundo
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: holamundo-ingress 
  namespace: k8s-test-ns
  annotations:
#   kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: k8s.apiexample.com
    http:
      paths:
      - path: /hola/?(.*)
        backend:
          serviceName: hola-mundo
          servicePort: 80

---
